syntax = "proto3";

package client;

option go_package = "client";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/weaveworks/common/httpgrpc/httpgrpc.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// Alertmanager interface exposed to the Alertmanager Distributor
service Alertmanager {
  rpc HandleRequest(Request) returns(Response) {};
}

message Request {
  string UserID = 1;
  httpgrpc.HTTPRequest httpRequest = 2;
}

message Response {
  Status status = 1;
  string error = 2;
  httpgrpc.HTTPResponse httpResponse = 3;
}

enum Status {
  OK = 0;
  ERROR = 1;
  SHUTTING_DOWN = 2;
}
